# coding-agent

./: .env.example  .gitignore  AGENTS.md  PRESENTACION.md  README.md  agent.config.example.yaml  main.py  pyproject.toml  rag.manifest.printscript.json  requirements.txt  run_agent.py
agents/: __init__.py  base.py  context_manager.py  explorer.py  implementer.py  orchestrator.py  project_memory.py  repository_detection.py  researcher.py  reviewer.py  tester.py  web_research.py
coding-agent/: main.py  requirements.txt
core/: config.py  harness.py  llm_client.py  models.py  observability.py  planned_operations.py  profiles.py  progress.py  research_ports.py  settings.py  supervision.py  task_state.py  validation.py
docs/: current_architecture.md
evidence/: entregable-7-langfuse.md  reflexion-final.md  tarea-1-analisis-arquitectura.md  tarea-2-bug-encontrado-y-arreglado.md
profiles/: example-generic.yaml  printscript.yaml
rag/: __init__.py  cli.py  embeddings.py  index_manager.py  models.py  processing.py  retriever.py  sources.py  vector_store.py
security/: command_policy.py  evidence_policy.py  paths.py  policy_engine.py
tests/: __init__.py  test_agent_config.py  test_analysis_context.py  test_base_agent.py  test_command_tools.py  test_context_manager.py  test_evidence_policy.py  test_explorer_agent.py  test_file_tools.py  test_harness.py  test_implementer_agent.py  test_incremental_explorer.py  test_llm_client.py  test_main.py  test_observability.py  test_orchestrator_integration.py  test_path_security.py  test_planned_operations.py  test_planning.py  (+16 more)
(+30 files in other folders)
