[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tavily-python>=0.5.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
]

[project.scripts]
coding-agent-index = "rag.cli:main"

[tool.setuptools]
packages = ["agents", "core", "rag", "security", "tools"]
py-modules = ["main"]
